Advanced Search as a working seperate page. that is linked up at all the correct points and looks good. Code could probably be cleaned up with helper functions, but this is a working version

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -22,6 +22,10 @@ textarea {
     max-width: 500px;
 }
 
+.form-horizontal .search-label {
+    text-align:left;
+}
+
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
