Fix home page issue with Father/Son

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
         new WeddingDanceClass{Title="Wedding",Image="wedding",TopDance="wedding-music",
             Dances=new List<DanceMapping>
             {
-                new WeddingDanceMapping("First Dance"),new WeddingDanceMapping("Mother Son"),new WeddingDanceMapping("Father Son"),
+                new WeddingDanceMapping("First Dance"),new WeddingDanceMapping("Mother Son"),new WeddingDanceMapping("Father Daughter"),new WeddingDanceMapping("Last Dance"),
             }},
     };
 }
