Added not like filter to default search when someone is signed in + updated the home page for the two most recent blog posts.

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -175,4 +175,8 @@
     <p class="neutral">The tag editor is the first of a number of features that I'm planning that will enable you to customize your music4dance experience... <a href="https://www.music4dance.net/blog/lets-tag-some-songs/">[Read more]</a></p>
     <h4 class="blog">I am learning the Foxtrot, where can I find some music?</h4>
     <p class="neutral">The quick answer is to just <a href="https://www.music4dance.net/song/search?dances=FXT">click this link</a> where you will find a list of over a thousand songs... <a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">[Read more]</a></p>
+    <h4 class="blog">Searching for music to dance to just got a whole lot easier</h4>
+    <p class="neutral">I have been adding capabilities to the music4dance advanced search control as they are suggested and as time permits.  And it got a bit out of control, so to speak... <a href="https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/">[Read more]</a></p>
+    <h4 class="blog">Are there songs that you never want to dance to again?</h4>
+    <p class="neutral">I know for me there are a few songs that I spent way too much time listening to while learning choreography or cutting medleys.  I never want to hear them again... <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">[Read more]</a></p>
 </div>
