Amanda's changes to add a FAQ page + add the new blog posts to the sitemap. Also change direct email links to links to the feedback form (which now gives an email link).

--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -35,6 +35,7 @@
         <ul>
             <li><a href="https://www.music4dance.net/blog/music4dance-help/">Help</a></li>
             <li><a href="/home/about">About Us</a></li>
+            <li><a href="/home/faq">FAQ</a></li>
             <li><a href="/blog">Blog</a>
                 <ul>
                     <li><a href="https://www.music4dance.net/blog/hello-world/">Introducing Music4Dance.Net/Blog</a></li>
@@ -53,7 +54,10 @@
                     <li><a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">What if I want to build a list of songs that are tagged as either Bolero or Rumba?</a></li>
                     <li><a href="https://www.music4dance.net/blog/lets-tag-some-songs/">Let's tag some songs!</a></li>
                     <li><a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></li>
+                    <li><a href="">https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/</a> Searching for mucis to dance to just got a whole lot easier</li>
+                    <li><a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/"></a>Are there songs that you never want to dance to again?</li>
                     <!--<li><a href=""></a></li>-->
+                    @*Last updated 12/7/15*@
                 </ul>
             </li>
             <li><a href="/home/contact">Contact</a></li>
