--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="@help">Help</a></li>
                             <li><a href="https://www.music4dance.net/blog">Blog</a></li>
-                            @*<li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>*@
+                            <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
                             <li>@Html.ActionLink("About Us", "About", "Home")</li>
                             <li>@Html.ActionLink("Site Map", "sitemap", "Home")</li>
                             <li>@Html.ActionLink("Credits", "credits", "Home")</li>
