--- a/DanceCalc/m4d/Views/Home/FAQ.cshtml
+++ b/DanceCalc/m4d/Views/Home/FAQ.cshtml
@@ -5,8 +5,111 @@
 }
 
 <div class="row">
-    <div class="col-md-8">
-        <h1>FAQ</h1>
-        <p class="neutral">This page is coming soon! Check back at a later date to see the fully functional page.</p>
-      </div>  
+    <div class="col-md-11">
+        <h1>Frequently Asked Questions:</h1>
+        <div class="row col-md-11">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingOne">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Where can I find songs that work with the dance style I'm currently practicing?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                        <div class="panel-body">
+                            <p class="neutral">Go to the  <a href="/song/advancedsearchform">Advanced Search</a> available from the "Music" menu and include the style of dance you are interested then click search. The result should be a list of songs that can be danced to that style.</p>
+                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">I’m learning to Cha Cha, where is some great music for practicing?</a> and <a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></p>
+                            <p class="neutral">The <a href="https://www.music4dance.net/blog/music4dance-help/advanced-search/">Advanced Search Documentation</a> describes the different search attributes in more detail.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingTwo">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What dance styles work with the song I'm listening to or a specific song that I know of?</a>
+                        </h4>
+                    </div>
+                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                        <div class="panel-body">
+                            <p class="neutral">With the <a href="/home/counter">tempo counter tool</a> you can tap out the beat while listening to a song, and we'll show you a list of styles that can be danced to the beat you just tapped out as well as links to the dance styles' information pages.</p>
+                            <p class="neutral">Or if you have a particular song in mind, <a href="/song/advancedsearchform">search</a> for it and if it is in the database look at what styles and tags are associated with it.</p>
+                            <p class="neutral">If you would like more information please read this blog blost <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">What dance styles can I dance to my favorite song(s)?</a> and the <a href="https://www.music4dance.net/blog/music4dance-help/tempo-counter/">documentation</a> for the Tempo Counter.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingThree">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Why should I sign up with Music4Dance?</a>
+                        </h4>
+                    </div>
+                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                        <div class="panel-body">
+                            <p class="neutral">It's Free! You'll be able to edit tags on songs and Music4Dance will remember the songs you like, edited, or even disliked. <a href="/account/signup">Sign up today!</a> We are always working on new features for our site and special features for our registered users.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingFour">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">I'm not finding the song I want, what should I do?</a>
+                        </h4>
+                    </div>
+                    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+                        <div class="panel-body">
+                            <p class="neutral">Send email to <a href="mailto:info@music4dance.net">info@music4dance.net</a> and we will try to add it! Feel free to give us any other feedback you might have as well.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingFive">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">I'm a competition Ballroom dancer, how can music4dance help me find music?</a>
+                        </h4>
+                    </div>
+                    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                        <div class="panel-body">
+                            <p class="neutral">
+                                Go to our <a href="/dances/ballroom-competition-categories">Ballroom competition categories</a> page and see the list of the different
+                                competition categories and the dance/song requirements for several organizations that publish competition rules.
+                            </p>
+                            <p class="neutral">If you would like more information check out our related blog post.  <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingSix">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                I want to find a great song for my first dance at my wedding, where should I look?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+                        <div class="panel-body">
+                            <p class="neutral">
+                                Check out the <a href="/dances/weddingdancemusic">wedding page</a> for information to help you get started,
+                                or you can go to the <a href="/song/advancedsearchform">advanced search</a> page and look for songs that are tagged as First Dance and/or Wedding.
+                            </p>
+                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">Wedding Music Part I: Can we dance the Foxtrot to our song?</a> and <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" role="tab" id="headingSeven">
+                        <h4 class="panel-title">
+                            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Not finding the answer to your question or want to give us feedback?</a>
+                        </h4>
+                    </div>
+                    <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+                        <div class="panel-body">
+                            <p class="neutral">If you are not finding the answer to your question here or wish to give us feedback on any part of the site please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
