Added a what you can do when you're signed in/signed up section to the sign in and sign up pages.

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -278,6 +278,11 @@ a.text-other:hover,
     list-style-type: none;
 }
 
+.list-clean-aligned {
+    list-style-type: none;
+    margin-left: -2em;
+}
+
 .centeredImage {
     text-align: center;
     margin-top: 0;
