--- a/DanceCalc/m4d/Views/Account/SignIn.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignIn.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-5">
         <section id="loginForm">
             @* ReSharper disable once RedundantAnonymousTypePropertyName *@
             @using (Html.BeginForm("SignIn", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -56,6 +56,11 @@
     <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>
+    <div class="col-md-3">
+        <section id="whySignUp">
+            @Html.Partial("_WhySignUp", new WhySignUpViewModel { Form="When you're signed in"})
         </section>
     </div>
 </div>
