--- a/DanceCalc/m4d/Views/Account/SignUp.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignUp.cshtml
@@ -8,7 +8,7 @@
 <h2>@ViewBag.Title.</h2>
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-5">
         <section id="registerForm">
             @using (Html.BeginForm("SignUp", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -61,6 +61,11 @@
     <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>
+    <div class="col-md-3">
+        <section id="whySignUp">
+            @Html.Partial("_WhySignUp", new WhySignUpViewModel { Form = "When you've signed up" })
         </section>
     </div>
 </div>
