Implement admin code to set all of a particular user's songs to 'like'

--- a/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Details.cshtml
@@ -153,11 +153,10 @@
         <dd>
             @Html.DisplayFor(model => model.ServicePreferenceDescription)
         </dd>
-
-
     </dl>
 </div>
 <p>
-    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@    
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
+    @Html.ActionLink("AutoLike", "AutoLike", new {id = Model.Id}) | 
     @Html.ActionLink("Back to List", "Index")
 </p>
