Show like/hate in songlist/search results Icon cycles through like/dislike/no-vote without refreshing the page (ajax back to server). If the user isn't signed in the icons all show up as empty-hearts and link to signin I also improved the returnUrl feature to handle the local case correctlly, so an unsigned in user should be able to cklick a heart, sign in and land back on the same page they started from.

--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -11,7 +11,7 @@
     <h1>
         @if (User.Identity.IsAuthenticated)
         {
-            <a class="btn btn-sm btn-info" role="button" data-bind="click:toggleVote">
+            <a class="btn btn-sm btn-info" role="button" data-show="tooltip" data-placement="right" data-bind="attr: {'data-original-title':song.liketip},click:toggleVote">
                 <img data-bind="attr: {src:song.voteImage}" />
             </a>
         }
