--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -5,14 +5,20 @@
     var isAdmin = User.IsInRole("dbAdmin");
     var canSort = ViewData.ContainsKey("NoSort") ? !ViewBag.NoSort : true;
     var hideDances = ViewData.ContainsKey("HideDances") ? ViewBag.HideDances : false;
-    string albumName = ViewData.ContainsKey("AlbumName") ? ViewBag.AlbumName : null;    
+    string albumName = ViewData.ContainsKey("AlbumName") ? ViewBag.AlbumName : null;
     var hideArtist = ViewData.ContainsKey("HideArtist") ? ViewBag.HideArtist : false;
     var showLength = ViewData.ContainsKey("ShowLength") ? ViewBag.ShowLength : false;
-    
+
     var danceMap = (IDictionary<string, SongCounts>)ViewBag.DanceMap;
     var songOrder = new SongSort(ViewBag.SongFilter.SortOrder);
     var showDate = songOrder.Id == "Modified" || songOrder.Id == "Created";
     SongFilter filter = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter : new SongFilter();
+    Dictionary<Guid, bool?> likes = ViewData.ContainsKey("Likes") ? ViewBag.Likes : null;
+    var activeLikes = (likes == null) ? string.Empty : "toggle-like";
+
+    const string heartTipNull = "Click to like/dislike this song.";
+    const string heartTipTrue = "You have liked this song, click to dislike";
+    const string heartTipFalse = "You have disliked this song, click to reset";
 }
 
 @helper ArtistHeader(bool canSort, SongSort songOrder, SongFilter filter)
@@ -78,41 +84,50 @@
     }
 }
 
+<script>
+    window.HeartOptions = {
+        'true': { tip: '@heartTipTrue', img: '' },
+        'false': { tip: '@heartTipFalse', img: '-broken' },
+        'null': {tip: '@heartTipNull', img: '-outline'}
+    };
+</script>
+
 <table class="table table-striped table-songs">
     <thead>
-        <tr>
-            <th style="min-width: 30px">Play</th>
-            @if (isAdmin)
+    <tr>
+        <th style="width:75px">Like/Play</th>
+
+        @if (isAdmin)
+        {
+            <th>&nbsp;</th>
+            if (canSort)
             {
                 <th>&nbsp;</th>
-                if (canSort)
-                {
-                    <th>&nbsp;</th>
-                }
             }
-            <th style="min-width:75pt">
-                @if (canSort)
-                {
-                    @Html.ActionLink("Title", "Sort", "Song", new { sortOrder = "Title", filter }, null)
-                    @Html.Raw(songOrder.GetSortGlyph("Title"))
-                }
-                else
-                {
-                    <text>Title</text>
-                }
-                @if (!hideArtist)
-                {
-                    <span class="visible-xs"> - @ArtistHeader(canSort, songOrder, filter)</span>
-                }
-            </th>
+        }
+        <th style="min-width:75px">
+            @if (canSort)
+            {
+                @Html.ActionLink("Title", "Sort", "Song", new {sortOrder = "Title", filter}, null)
+                @Html.Raw(songOrder.GetSortGlyph("Title"))
+            }
+            else
+            {
+                <text>Title</text>
+            }
             @if (!hideArtist)
             {
-                <th class="hidden-xs" style="min-width:75pt">
-                    @ArtistHeader(canSort,songOrder,filter)
-                </th>
-            }            
-            @if (albumName == null)
-            {
+                <span class="visible-xs"> - @ArtistHeader(canSort, songOrder, filter)</span>
+            }
+        </th>
+        @if (!hideArtist)
+        {
+            <th class="hidden-xs" style="min-width:75px">
+                @ArtistHeader(canSort, songOrder, filter)
+            </th>
+        }
+        @if (albumName == null)
+        {
                 @* TODO: Reinstate album name when we get user selectable columns
                     <th style="min-width:75pt" class="hidden-xs">
                     @if (canSort)
@@ -125,61 +140,61 @@
                         <text>Album</text>
                     }
                 </th>*@
+        }
+        else
+        {
+            <th style="min-width:75px" class="hidden-xs">
+                Track
+            </th>
+        }
+        <th class="hidden-xs">
+            @if (canSort)
+            {
+                @Html.ActionLink("Tempo (BPM)", "sort", "song", new {sortOrder = "Tempo", filter}, null)
+                @Html.Raw(songOrder.GetSortGlyph("Tempo"))
             }
             else
             {
-                <th style="min-width:75pt" class="hidden-xs">
-                    Track
-                </th>
+                <text>Tempo (BPM)</text>
             }
+        </th>
+        @if (showLength)
+        {
             <th class="hidden-xs">
+                Length
+            </th>
+        }
+
+
+        @if (!hideDances)
+        {
+            <th style="max-width:200px">
                 @if (canSort)
                 {
-                    @Html.ActionLink("Tempo (BPM)", "sort", "song", new {sortOrder = "Tempo", filter}, null)
-                    @Html.Raw(songOrder.GetSortGlyph("Tempo"))
+                    @Html.ActionLink("Dances", "sort", "song", new {sortOrder = "Dances", filter}, null)
+                    @Html.Raw(songOrder.GetSortGlyph("Dances"))
                 }
                 else
                 {
-                    <text>Tempo (BPM)</text>
+                    <text>Dances</text>
                 }
+                <span class="visible-xs"> - @TagHeader(filter)</span>
             </th>
-            @if (showLength)
-            {
-                <th class="hidden-xs">
-                    Length
-                </th>
-            }
-
-
-            @if (!hideDances)
-            {
-                <th>
-                    @if (canSort)
-                    {
-                        @Html.ActionLink("Dances", "sort", "song", new { sortOrder = "Dances", filter }, null)
-                        @Html.Raw(songOrder.GetSortGlyph("Dances"))
-                    }
-                    else
-                    {
-                        <text>Dances</text>
-                    }
-                    <span class="visible-xs"> - @TagHeader(filter)</span>
-                </th>
-            }
-            <th class="@(hideDances ? string.Empty : "hidden-xs")">@TagHeader(filter)</th>
-            @if (isAdmin)
-            {
-                <th></th>
-            }
-            @if (showDate)
-            {
-                var timeName = songOrder.Id;
-                <th>
-                    @Html.ActionLink(timeName, "sort", "song", new { sortOrder = timeName, filter }, null)
-                    @Html.Raw(songOrder.GetSortGlyph(timeName))
-                </th>
-            }
-        </tr>
+        }
+        <th style="max-width:200px" class="@(hideDances ? string.Empty : "hidden-xs")">@TagHeader(filter)</th>
+        @if (isAdmin)
+        {
+            <th></th>
+        }
+        @if (showDate)
+        {
+            var timeName = songOrder.Id;
+            <th>
+                @Html.ActionLink(timeName, "sort", "song", new {sortOrder = timeName, filter}, null)
+                @Html.Raw(songOrder.GetSortGlyph(timeName))
+            </th>
+        }
+    </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
@@ -213,50 +228,90 @@
             {
             <tr>
                 <td>
-                    @if (!string.IsNullOrWhiteSpace(item.Purchase))
-                    {
-                        var id = "Play" + item.SongId;
-                        <div class="btn-group">
-                            <a href="#" id="@id" role="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><img src="@Url.Content("~/Content/playbutton.png")" alt="Play" width="20" height="20" /></a>
-                            <ul class="dropdown-menu" role="menu">
-                                @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('X'))
-                                {
-                                    var xid = "X" + item.SongId;
-                                    <li><a href="#" id="@xid" class="play-link"><img src='@Url.Content("~/Content/xbox-logo.png")' alt="Availiable on Groove Music" width="20" height="20" /> Groove</a></li>
-                                }
-                                @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('I'))
-                                {
-                                    var iid = "I" + item.SongId;
-                                    <li><a href="#" id="@iid" class="play-link"><img src='@Url.Content("~/Content/itunes-logo.png")' alt=" availiable on itunes" width="20" height="20" /> ITunes</a></li>
-                                }
-                                @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('A'))
-                                {
-                                    var aid = "A" + item.SongId;
-                                    <li><a href="#" id="@aid" class="play-link"><img src='@Url.Content("~/Content/amazon-logo.png")' alt=" availiable at amazon" width="20" height="20" /> Amazon</a></li>
-                                }
-                                @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('S'))
-                                {
-                                    var sid = "S" + item.SongId;
-                                    <li><a href="#" id="@sid" class="play-link"><img src='@Url.Content("~/Content/spotify-logo.png")' alt=" availiable on spotify" width="20" height="20" /> Spotify</a></li>
-                                }
-                            </ul>
-                        </div>
+                    @{
+                        bool? like;
+                        if (likes == null || !likes.TryGetValue(item.SongId, out like))
+                        {
+                            like = null;
+                        }
+                        var heart = "outline-";
+                        var heartAlt = "No Opinion";
+                        var heartTip = heartTipNull;
+                        var href = "#";
+                        var state = "null";
+
+                        if (likes == null)
+                        {
+                            heartTip = "Sign In to like/dislike songs.";
+                            href = "/account/signin?ReturnUrl=" + Request.Url;
+                        }
+                        else if (like.HasValue)
+                        {
+                            if (like.Value)
+                            {
+                                heart = string.Empty;
+                                state = "true";
+                                heartAlt = "Like";
+                                heartTip = heartTipTrue;
+                            }
+                            else
+                            {
+                                heart = "broken-";
+                                state = "false";
+                                heartAlt = "Dislike";
+                                heartTip = heartTipFalse;
+                            }
+                        }
+                        var heartImg = string.Format("~/Content/heart-{0}icon.png", heart);
+
+                        <a id="like.@item.SongId" class="btn btn-sm btn-info @activeLikes" style="padding:3px" role="button" href="@href" data-like="@state" data-toggle="tooltip" data-placement="right" title="@heartTip">
+                            <img src='@Url.Content(heartImg)' alt="@heartAlt"/>
+                        </a>
+                        if (!string.IsNullOrWhiteSpace(item.Purchase))
+                        {
+                            var id = "Play" + item.SongId;
+                            <div class="btn-group">
+                                <a href="#" id="@id" role="button" class="btn dropdown-toggle"  style="padding:0" data-toggle="dropdown" aria-expanded="false"><img src="@Url.Content("~/Content/playbutton.png")" alt="Play" width="20" height="20"/></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('X'))
+                                    {
+                                        var xid = "X" + item.SongId;
+                                        <li><a href="#" id="@xid" class="play-link"><img src='@Url.Content("~/Content/xbox-logo.png")' alt="Availiable on Groove Music" width="20" height="20"/> Groove</a></li>
+                                    }
+                                    @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('I'))
+                                    {
+                                        var iid = "I" + item.SongId;
+                                        <li><a href="#" id="@iid" class="play-link"><img src='@Url.Content("~/Content/itunes-logo.png")' alt=" availiable on itunes" width="20" height="20"/> ITunes</a></li>
+                                    }
+                                    @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('A'))
+                                    {
+                                        var aid = "A" + item.SongId;
+                                        <li><a href="#" id="@aid" class="play-link"><img src='@Url.Content("~/Content/amazon-logo.png")' alt=" availiable at amazon" width="20" height="20"/> Amazon</a></li>
+                                    }
+                                    @if (!string.IsNullOrEmpty(item.Purchase) && item.Purchase.Contains('S'))
+                                    {
+                                        var sid = "S" + item.SongId;
+                                        <li><a href="#" id="@sid" class="play-link"><img src='@Url.Content("~/Content/spotify-logo.png")' alt=" availiable on spotify" width="20" height="20"/> Spotify</a></li>
+                                    }
+                                </ul>
+                            </div>
+                        }
                     }
                 </td>
                 @if (isAdmin)
-                {
-                    var id = "Selected-" + item.SongId;
-                    if (canSort)
                     {
+                        var id = "Selected-" + item.SongId;
+                        if (canSort)
+                        {
                             <td><input name="selectedSongs" id="@id" type="checkbox" value="@item.SongId" /></td>
-                        }
+                            }
                         <td><a href="/song/edit?id=@item.SongId&filter=@filter" role="button" class="btn btn-link btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
                     }
 
                     <td>
                         @Html.ActionLink(item.Title, "details", "song", new { id = item.SongId, filter }, null)
                         @if (tempoString != null)
-                        {
+                    {
                             <small class="hidden-sm hidden-md hidden-lg">(@Html.Raw(tempoString) BPM)</small>
                         }
                         <span class="visible-xs"> - @Artist(item)</span>
@@ -371,7 +426,4 @@
             }
         }
     </tbody>
-
-
-
 </table>
