--- a/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
@@ -10,8 +10,8 @@
     <li class="active">Logging</li>
 </ol>
 
-<p>Start Time = <b>@AdminController.StartTime.ToString(CultureInfo.CurrentCulture)</b></p>
-<p>Up Time = <b>@AdminController.UpTime.ToString()</b></p>
+<p>Start Time = <b>@DMController.StartTime.ToString(CultureInfo.CurrentCulture)</b></p>
+<p>Up Time = <b>@DMController.UpTime.ToString()</b></p>
 
 <hr />
 <h3>Tracing (Current Level = @TraceLevels.General.Level.ToString())</h3>
@@ -49,3 +49,7 @@
     <input type="text" name="user" />
     <input type="submit" id="Submit" value="Search" />
 }
+
+<hr />
+<h3>Bot Stats</h3>
+@{Html.RenderPartial("_botreport", (object)ViewBag.BotReport);}
